test/compare/testdata/misc/label.go
// errorcheck

package main

func main() {
L: /  // ERROR `missing statement after label`
}
